Clean up to get feedback pushing to langfuse
